--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//reportes/ReporteReserva.jrxml=UTF-8
 encoding//src/main/java=UTF-8
 encoding/<project>=UTF-8
