--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,31 @@
 		    <!-- USAR LA VERSIÓN 5.1.44 SI USÁS MYSQL8 --> 
 		    <version>5.1.44</version>
 		</dependency>
+		
+		<dependency>
+   <groupId>org.hibernate</groupId>
+   <artifactId>hibernate-annotations</artifactId>
+   <version>3.4.0.GA</version>
+   <scope>compile</scope>
+</dependency>
+<dependency>
+   <groupId>mysql</groupId>
+   <artifactId>mysql-connector-java</artifactId>
+   <version>5.1.6</version>
+   <scope>compile</scope>
+</dependency>
+<dependency>
+   <groupId>org.slf4j</groupId>
+   <artifactId>slf4j-log4j12</artifactId>
+   <version>1.5.2</version>
+   <scope>compile</scope>
+</dependency>
+<dependency>
+   <groupId>javassist</groupId>
+   <artifactId>javassist</artifactId>
+   <version>3.4.GA</version>
+   <scope>compile</scope>
+</dependency>
 
     </dependencies>
     
