--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,14 @@
 		    <!-- USAR LA VERSIÓN 5.1.44 SI USÁS MYSQL8 --> 
 		    <version>5.1.44</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/com.fifesoft/autocomplete -->
+<dependency>
+    <groupId>com.fifesoft</groupId>
+    <artifactId>autocomplete</artifactId>
+    <version>2.5.8</version>
+</dependency>
+		
 
     </dependencies>
     
