--- a/pom.xml
+++ b/pom.xml
@@ -87,13 +87,18 @@
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/com.fifesoft/autocomplete -->
-<dependency>
-    <groupId>com.fifesoft</groupId>
-    <artifactId>autocomplete</artifactId>
-    <version>2.5.8</version>
-</dependency>
-		
+	<dependency>
+    	<groupId>com.fifesoft</groupId>
+    	<artifactId>autocomplete</artifactId>
+    	<version>2.5.8</version>
+	</dependency>
 
+<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+	<dependency>
+	    <groupId>javax.mail</groupId>
+	    <artifactId>mail</artifactId>
+	    <version>1.4</version>
+	</dependency>
     </dependencies>
     
  	<build>
