--- a/.classpath
+++ b/.classpath
@@ -31,5 +31,6 @@
 	<classpathentry kind="lib" path="recursos/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="autocomplete-2.5.8.jar"/>
 	<classpathentry kind="lib" path="mail-1.4.jar"/>
+	<classpathentry kind="lib" path="barcodes-7.1.3.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
