--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,6 @@
 		    <version>6.0.0</version>
 		</dependency>
 
-
 	    <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
 		<dependency>
 		    <groupId>commons-logging</groupId>
@@ -99,6 +98,14 @@
 	    <artifactId>mail</artifactId>
 	    <version>1.4</version>
 	</dependency>
+	
+	<dependency>
+    <groupId>com.itextpdf</groupId>
+    <artifactId>itextpdf</artifactId>
+    <version>5.3.4</version>
+</dependency>
+	
+	
     </dependencies>
     
  	<build>
