--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,6 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="recursos/jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="autocomplete-2.5.8.jar"/>
+	<classpathentry kind="lib" path="JTattoo-1.6.11.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
