--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//reportes/ReporteEmpleados.jrxml=UTF-8
 encoding//reportes/ReportePago.jrxml=UTF-8
+encoding//reportes/ReportePasajes.jrxml=UTF-8
 encoding//reportes/ReporteReserva.jrxml=UTF-8
 encoding//reportes/ReporteVentas.jrxml=UTF-8
 encoding//src/main/java=UTF-8
