Modificaciones en reporte

--- a/reportes/.gitignore
+++ b/reportes/.gitignore
@@ -3,5 +3,5 @@
 /ReporteReserva.jasper
 /ReporteVentas.jasper
 /ReporteEmpleados.jasper
-/Copy of ReporteVentas.jasper
+/ReporteVentas.jasper
 /ReportePasajes.jasper
