--- a/reportes/.gitignore
+++ b/reportes/.gitignore
@@ -5,3 +5,5 @@
 /ReporteEmpleados.jasper
 /ReporteVentas.jasper
 /ReportePasajes.jasper
+/ReporteCancelacionReserva.jasper
+/ReporteCancelacionVenta.jasper
