--- a/reportes/.gitignore
+++ b/reportes/.gitignore
@@ -8,3 +8,6 @@
 /ReporteCancelacionReserva.jasper
 /ReporteCancelacionVenta.jasper
 /ReporteCoordinadores.jasper
+/ReporteIngresosCliente.jasper
+/ReporteIngresosVendedor.jasper
+/ReporteIngresosPorDestino.jasper
