--- a/pom.xml
+++ b/pom.xml
@@ -104,8 +104,14 @@
     <artifactId>itextpdf</artifactId>
     <version>5.3.4</version>
 </dependency>
-	
-	
+
+<!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+<dependency>
+    <groupId>commons-codec</groupId>
+    <artifactId>commons-codec</artifactId>
+    <version>1.2</version>
+</dependency>
+
     </dependencies>
     
  	<build>
