--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,13 @@
             <scope>test</scope>
         </dependency>
         
+	        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
+		<dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>1.2</version>
+		</dependency>
+        
         <!-- Jasperreports -->
 		<dependency>
 		    <groupId>net.sf.jasperreports</groupId>
@@ -92,19 +99,21 @@
     	<version>2.5.8</version>
 	</dependency>
 
-<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
-	<dependency>
-	    <groupId>javax.mail</groupId>
-	    <artifactId>mail</artifactId>
-	    <version>1.4</version>
-	</dependency>
+	<!-- https://mvnrepository.com/artifact/javax.mail/mail -->
+		<dependency>
+		    <groupId>javax.mail</groupId>
+		    <artifactId>mail</artifactId>
+		    <version>1.4</version>
+		</dependency>
 	
 	<dependency>
     <groupId>com.itextpdf</groupId>
     <artifactId>itextpdf</artifactId>
     <version>5.3.4</version>
 </dependency>
-	
+
+
+
 	
     </dependencies>
     
