--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,6 +4,8 @@ encoding//reportes/ReporteEmpleados.jrxml=UTF-8
 encoding//reportes/ReporteIngresosCliente.jrxml=UTF-8
 encoding//reportes/ReporteIngresosPorDestino.jrxml=UTF-8
 encoding//reportes/ReporteIngresosVendedor.jrxml=UTF-8
+encoding//reportes/ReportePago.jrxml=UTF-8
+encoding//reportes/ReporteReserva.jrxml=UTF-8
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding/<project>=UTF-8
